@@ -11,7 +11,7 @@ echo properties/README.txt >> installer/jedit-program
 echo startup/README.txt >> installer/jedit-program
 find modes -name \*.xml >> installer/jedit-program
 echo modes/catalog >> installer/jedit-program
-find doc \( -name \*.txt -o -name \*.html -o -name \*.gif \) >> installer/jedit-program
+find doc \( -name \*.txt -o -name \*.html -o -name \*.png \) >> installer/jedit-program
 find doc -name toc.xml >> installer/jedit-program
 
 echo -n "jedit-program: "
